[package]
name = "fedimint-client"
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
description = "Library for sending transactions to the Fedimint federation."

[package.metadata.cargo-udeps.ignore]
# cargo udeps can't detect that one
normal = ["aquamarine"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[features]
tor = ["fedimint-client-module/tor"]

[lib]
name = "fedimint_client"
path = "src/lib.rs"

[dependencies]
fedimint-client-module = { workspace = true }
