[package]
description = "Library for sending transactions to the Fedimint federation."
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
name = "fedimint-client"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[package.metadata.cargo-udeps.ignore]
# cargo udeps can't detect that one
normal = ["aquamarine"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[features]
tor = ["fedimint-client-module/tor"]

[lib]
name = "fedimint_client"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
bitcoin = { workspace = true, features = ["rand-std"] }
fedimint-aead = { workspace = true }
fedimint-api-client = { workspace = true }
fedimint-client-module = { workspace = true }
fedimint-connectors = { workspace = true }
fedimint-core = { workspace = true }
fedimint-derive-secret = { workspace = true }
fedimint-eventlog = { workspace = true }
fedimint-logging = { workspace = true }
fedimint-metrics = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
tracing-test = { workspace = true }

[build-dependencies]
fedimint-build = { workspace = true }

[lints]
workspace = true
