[package]
name = "fedimint-core"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "fedimint-core provides common code used by both client and server."
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[package.metadata.cargo-udeps.ignore]
development = ["tokio-test"]

[features]

[lib]
name = "fedimint_core"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-channel = "2.3.1"
async-recursion = "1.1.1"
async-trait = { workspace = true }
backon = { version = "1.5.0", default-features = false }
backtrace = "0.3.74"
base64 = { workspace = true }
base64-url = { workspace = true }
bech32 = "0.11.0"
bincode = { workspace = true }
bitcoin = { workspace = true }
bitcoin-io = "0.1.2"
bitcoin-units = "0.1.2"
bitvec = "1.0.1"
bls12_381 = { workspace = true }
erased-serde = { workspace = true }
fedimint-derive = { workspace = true }
fedimint-logging = { workspace = true }
futures = { workspace = true }
group = { workspace = true }
hex = { workspace = true, features = ["serde"] }
hex-conservative = { workspace = true }
imbl = "5.0.0"
iroh-base = { workspace = true, default-features = false, features = ["key"] }
itertools = { workspace = true }
jsonrpsee-core = { version = "0.24.9", features = ["client"] }
lightning = { workspace = true }
lightning-invoice = { workspace = true, features = ["serde"] }
lightning-types = "0.1.0"
macro_rules_attribute = "0.2.0"
miniscript = { workspace = true, features = ["serde"] }
parity-scale-codec = { version = "3.7.4", features = ["derive"] }
rand = { workspace = true }
scopeguard = { workspace = true }
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
serde = { workspace = true }
serde_json = { workspace = true }
serdect = { workspace = true }
slotmap = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
threshold_crypto = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
test-log = { workspace = true }
tokio-test = "0.4.4"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["full", "tracing"] }
tokio-rustls = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
async-lock = "3.4"
tokio = { workspace = true, features = ["io-util"] }
futures-util = { workspace = true }
# getrandom is transitive dependency of rand
# on wasm, we need to enable the js backend
# see https://docs.rs/getrandom/latest/getrandom/#indirect-dependencies and https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.2.15", features = ["js"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
# enable lowmemory for better bundle size
secp256k1 = { workspace = true, features = ["lowmemory"] }
