[package]
authors = { workspace = true }
description = "fedimint-cursed-redb provides a hybrid memory/redb database implementation for Fedimint."
edition = { workspace = true }
license = { workspace = true }
name = "fedimint-cursed-redb"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[lib]
name = "fedimint_cursed_redb"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
fedimint-core = { workspace = true }
fedimint-logging = { workspace = true }

futures = { workspace = true }
imbl = { workspace = true }
redb = "2.2.0"
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = [
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
  "macros",
] }

[lints]
workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
fedimint-db-locked = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
gloo-utils = "0.2"
web-sys = { version = "0.3", features = [
  "FileSystemSyncAccessHandle",
  "FileSystemReadWriteOptions",
] }
