[package]
authors = { workspace = true }
description = "fedimint-cursed-redb provides a hybrid memory/redb database implementation for Fedimint."
edition = { workspace = true }
license = { workspace = true }
name = "fedimint-cursed-redb"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[lib]
name = "fedimint_cursed_redb"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
fedimint-core = { workspace = true }
fedimint-db-locked = { workspace = true }
fedimint-logging = { workspace = true }
fs-lock = { workspace = true }
futures = { workspace = true }
imbl = { workspace = true }
redb = "2.2.0"
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }

[lints]
workspace = true
