[package]
authors = { workspace = true }
description = "fedimint-db-locked provides a generic file-system lock wrapper for database implementations in Fedimint."
edition = { workspace = true }
license = { workspace = true }
name = "fedimint-db-locked"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[lib]
name = "fedimint_db_locked"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
fedimint-core = { workspace = true }
fedimint-logging = { workspace = true }
fs-lock = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
