[package]
name = "fedimint-dbdump"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fedimint-dbdump"
path = "src/main.rs"

[dependencies]
fedimint-api = { path = "../fedimint-api" }
fedimint-core = { path = "../fedimint-core" }
fedimint-server = { path = "../fedimint-server" }
fedimint-rocksdb = { path = "../fedimint-rocksdb" }
fedimint-mint = { path = "../modules/fedimint-mint" }
fedimint-ln = { path = "../modules/fedimint-ln" }
fedimint-wallet = { path = "../modules/fedimint-wallet" }
hex = { version = "0.4.3", features = [ "serde"] }
mint-client = { path = "../client/client-lib" }
erased-serde = "0.3"
docopt = "1.1.1"
secp256k1 = { version = "0.24.2", features = [ "serde" ] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.91"
strum = "0.24"
strum_macros = "0.24"
tokio = { version = "1.23.1", features = ["full"] }
