[package]
description = "Tool to inspect Fedimint client and server databases"
edition = { workspace = true }
license = { workspace = true }
name = "fedimint-dbtool"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[[bin]]
name = "fedimint-dbtool"
path = "src/main.rs"

[lib]
name = "fedimint_dbtool"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
erased-serde = { workspace = true }
fedimint-client = { workspace = true }
fedimint-client-module = { workspace = true }
fedimint-core = { workspace = true }
fedimint-gateway-server-db = { workspace = true }
fedimint-ln-client = { workspace = true }
fedimint-ln-server = { workspace = true }
fedimint-lnv2-client = { workspace = true }
fedimint-lnv2-server = { workspace = true }
fedimint-logging = { workspace = true }
fedimint-meta-client = { workspace = true }
fedimint-meta-server = { workspace = true }
fedimint-mint-client = { workspace = true }
fedimint-mint-server = { workspace = true }
fedimint-rocksdb = { workspace = true }
fedimint-server = { workspace = true }
fedimint-wallet-client = { workspace = true }
fedimint-wallet-server = { workspace = true }
fedimint-walletv2-client = { workspace = true }
futures = { workspace = true }
hex = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
fedimint-build = { workspace = true }

[lints]
workspace = true
