[package]
name = "fedimint-dbtool"
version = "0.3.4-rc.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Tool to inspect Fedimint client and server databases"
repository = "https://github.com/fedimint/fedimint"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "fedimint-dbtool"

[dependencies]
anyhow = "1.0.81"
fedimint-aead = { version = "=0.3.4-rc.0", path = "../crypto/aead" }
bitcoin_hashes = "0.11.0"
bytes = "1.5.0"
clap = { version = "4.5.2", features = ["derive", "env"] }
fedimint-core = { version = "=0.3.4-rc.0", path = "../fedimint-core" }
fedimint-client = { version = "=0.3.4-rc.0", path = "../fedimint-client" }
fedimint-server = { version = "=0.3.4-rc.0", path = "../fedimint-server" }
fedimint-rocksdb = { version = "=0.3.4-rc.0", path = "../fedimint-rocksdb" }
fedimint-mint-server = { version = "=0.3.4-rc.0", path = "../modules/fedimint-mint-server" }
fedimint-mint-client = { version = "=0.3.4-rc.0", path = "../modules/fedimint-mint-client" }
fedimint-ln-server = { version = "=0.3.4-rc.0", path = "../modules/fedimint-ln-server" }
fedimint-ln-client = { version = "=0.3.4-rc.0", path = "../modules/fedimint-ln-client" }
fedimint-logging = { version = "=0.3.4-rc.0", path = "../fedimint-logging" }
fedimint-wallet-server = { version = "=0.3.4-rc.0", path = "../modules/fedimint-wallet-server" }
fedimint-wallet-client = { version = "=0.3.4-rc.0", path = "../modules/fedimint-wallet-client" }
futures = "0.3.30"
erased-serde = "0.4"
hex = { version = "0.4.3", features = ["serde"] }
ln-gateway = { package = "fedimint-ln-gateway", version = "=0.3.4-rc.0", path = "../gateway/ln-gateway" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
strum = "0.26"
strum_macros = "0.26"
tokio = "1.36.0"
tracing = "0.1.40"

[build-dependencies]
fedimint-build = { version = "=0.3.4-rc.0", path = "../fedimint-build" }
