[package]
name = "fedimint-derive"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "fedimint-derive provides helper macros for serialization."
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[features]
diagnostics = []

[lib]
proc-macro = true
name = "fedimint_derive"
path = "src/lib.rs"

[dependencies]
itertools = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
