[package]
authors = { workspace = true }
description = "fedimint-derive provides helper macros for serialization."
edition = { workspace = true }
license = { workspace = true }
name = "fedimint-derive"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[features]
diagnostics = []

[lib]
name = "fedimint_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
itertools = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }

[lints]
workspace = true
