[package]
authors = { workspace = true }
description = "fedimint-eventlog provides a eventlog handling primitives for Fedimint."
edition = { workspace = true }
license = { workspace = true }
name = "fedimint-eventlog"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[lib]
name = "fedimint_eventlog"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
fedimint-core = { workspace = true }
fedimint-logging = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time", "macros", "rt"] }
tracing = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }

[lints]
workspace = true
