[package]
authors = { workspace = true }
description = "fedimint-fjall provides a fjall-backed database implementation for Fedimint."
edition = { workspace = true }
license = { workspace = true }
name = "fedimint-fjall"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[lib]
name = "fedimint_fjall"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
fedimint-core = { workspace = true }
fedimint-logging = { workspace = true }
fjall = { version = "2.11", default-features = false, features = [
  "ssi_tx",
  "lz4",
] }
futures = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true

[target.'cfg(not(target_family="wasm"))'.dependencies]
tokio = { workspace = true, features = [
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
] }
